# rack-manager

./: README.md
.github/workflows/: tests.yaml
code/: Cargo.toml  README.md
code/controller/: Cargo.toml
code/controller/src/: main.rs
code/dev-board/: Cargo.toml  README.md
code/dev-board/src/: main.rs
code/executor/: Cargo.toml
code/executor/examples/: simple.rs
code/executor/src/: helper.rs  lib.rs  staticlist.rs  tasklist.rs  waking.rs
code/general/: Cargo.toml
code/general/src/: bfmt.rs  lib.rs  serial.rs
code/protocol/: Cargo.toml
code/protocol/src/: controller.rs  extension.rs  lib.rs  options.rs  packet.rs  traits.rs
code/utils/: Cargo.toml
code/utils/src/: allocator.rs  atomic.rs  lib.rs  queue.rs  stm32l432.rs  timer.rs
code/utils/src/stm32l432/: logging.rs  serial.rs
design/: README.md  hardware.md  protocol.md
